Fix issue with page overflow and font size

--- a/index.css
+++ b/index.css
@@ -22,7 +22,7 @@ body {
 
 .pointer-title {
   background: url("images/wooden.jpg") !important;
-  font-size: 1.8rem !important;
+  font-size: 2.2rem !important;
   margin: 0% 1% 1%;
   text-align: center;
 }
